<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:context="com.example.andajsingh.journeyjournal.np.example.andajsingh.journeyjournal.presentation.login.LoginActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_size_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/teal_700"
        android:text="@string/login_page_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        android:gravity="center"
        android:layout_margin="@dimen/widget_margin_normal"
        />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="@dimen/image_height"
        android:layout_height="@dimen/image_height"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@android:drawable/ic_menu_gallery"
        android:layout_margin="@dimen/widget_margin_normal"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_image"
        android:text="@string/email"
        android:textColor="@color/black"
        android:layout_margin="@dimen/widget_margin_normal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_size_normal"
        app:layout_constraintTop_toBottomOf="@+id/iv_image"
        android:hint="@string/hint_email"
        app:boxBackgroundMode="filled"
        android:layout_marginTop="@dimen/widget_margin_normal"
        app:boxBackgroundColor="@color/purple_200"
        android:layout_margin="@dimen/widget_margin_normal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_size_normal"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email"
        android:hint="@string/hint_password"
        app:boxBackgroundMode="filled"
        android:layout_marginTop="@dimen/widget_margin_normal"
        app:boxBackgroundColor="@color/purple_200"
        android:layout_margin="@dimen/widget_margin_normal"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
        android:layout_margin="@dimen/widget_margin_normal"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_register"
        android:textColor="@color/gray_chateau"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_normal"
        android:layout_marginBottom="@dimen/widget_margin_normal"/>

</androidx.constraintlayout.widget.ConstraintLayout>